--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
   "dependencies": {
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
+    "@types/react-router-dom": "^4.3.1",
     "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "react-dom": "^16.8.2",
+    "react-router-dom": "^4.3.1"
   }
 }
